# saaasas

./: README.md  config.py  main.py  pyproject.toml  setup_db.py
database/: client.py
database/models/: exchange.py  platform.py  token.py
database/repositories/: base.py  exchange_repo.py  token_repo.py
parsers/: main_parser.py  models.py
parsers/client/: api_client.py  rate_limiter.py
parsers/processors/: data_calculator.py  exchange_processor.py  token_processor.py
scheduler/: base_scheduler.py  job_manager.py
scheduler/jobs/: sync_job.py  update_job.py
utils/: exeption.py  logger.py  rate_limiter.py
